--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="main.css">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COMP001B Lecture Activity W5.1</title>
@@ -13,7 +15,40 @@
 </head>
 
 <body>
-    
+    <header class="bg-light py-3">
+        <div class="container">
+            <h1>My Website</h1>
+        </div>
+    </header>
+
+    <main class="py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2>Column 1</h2>
+                    <p>Content for column 1.</p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Column 2</h2>
+                    <p>Content for column 2.</p>
+                </div>
+                <div class="col-md-4">
+                    <h2>Column 3</h2>
+                    <p>Content for column 3.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-light py-3">
+        <div class="container">
+            <p>&copy; 2023 My Website</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
